test: Add filter command tests